--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ message(${CMAKE_SYSTEM_PROCESSOR})
 include_directories(src)
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h" "src/*.c")
 
-if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86-64")
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
 find_program(YASM_EXE NAMES yasm)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 	set(YASM_ARGS "-f" "x64" "-f" "elf64" "-X" "gnu" "-g" "dwarf2" "-D" "LINUX")
