--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cpu_features"]
 	path = cpu_features
 	url = https://github.com/google/cpu_features.git
+[submodule "cpr"]
+	path = cpr
+	url = git@github.com:whoshuu/cpr.git
