--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.1)
 project (basilisk_hunter C CXX ASM)
 add_subdirectory(cpu_features)
 
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+add_subdirectory(json)
+
 set(BUILD_CPR_TESTS OFF)
 set(CURL_STATICLIB ON)
 add_subdirectory(cpr)
@@ -47,8 +50,6 @@ find_package(Threads REQUIRED)
 set(CMAKE_CXX_STANDARD 11)
 
 add_executable(basilisk_hunter ${SOURCES} ${YASM_OBJECTS})
-target_link_libraries(basilisk_hunter Threads::Threads)
-target_link_libraries(basilisk_hunter cpu_features Threads::Threads)
-target_link_libraries(basilisk_hunter ${CPR_LIBRARIES})
+target_link_libraries(basilisk_hunter Threads::Threads cpu_features ${CPR_LIBRARIES} nlohmann_json::nlohmann_json)
 set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -flto")
 set(CMAKE_EXE_LINKER_FLAGS "-flto")
