--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ add_custom_command(
 	OUTPUT ${VERSION_CPP_FILE}
 	COMMAND ${PYTHON_EXE}
 	ARGS ${VERSION_GENERATOR_SCRIPT} ${VERSION_CPP_FILE} ${CMAKE_PROJECT_NAME} "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" ${GIT_EXECUTABLE}
-	DEPENDS "${PROJECT_SOURCE_DIR}/.git/index" ${VERSION_GENERATOR_SCRIPT})
+	DEPENDS "${PROJECT_SOURCE_DIR}/.git/index" ${VERSION_GENERATOR_SCRIPT} ${SOURCES})
 set(SOURCES ${VERSION_CPP_FILE} ${SOURCES})
 
 if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
