Fix build on non-git repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 add_custom_command(
 	OUTPUT ${VERSION_CPP_FILE}
 	COMMAND ${PYTHON_EXE}
-	ARGS ${VERSION_GENERATOR_SCRIPT} ${VERSION_CPP_FILE} ${CMAKE_PROJECT_NAME} "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" ${GIT_EXECUTABLE}
+	ARGS ${VERSION_GENERATOR_SCRIPT} ${VERSION_CPP_FILE} ${CMAKE_PROJECT_NAME} "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" "${GIT_EXECUTABLE}"
 	DEPENDS ${VERSION_DEPENDS})
 set(SOURCES ${VERSION_CPP_FILE} ${SOURCES})
 
