Get building on MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(src)
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.h" "src/*.c")
 
 find_package(Git)
-find_program(PYTHON_EXE NAMES python3)
+find_program(PYTHON_EXE NAMES python3 py)
 set(VERSION_CPP_FILE "${PROJECT_BINARY_DIR}/src/version.cpp")
 set(VERSION_GENERATOR_SCRIPT "${PROJECT_SOURCE_DIR}/src/generate_version.py")
 set(VERSION_DEPENDS ${VERSION_GENERATOR_SCRIPT} ${SOURCES})
@@ -26,7 +26,7 @@ add_custom_command(
 	DEPENDS ${VERSION_DEPENDS})
 set(SOURCES ${VERSION_CPP_FILE} ${SOURCES})
 
-if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64")
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} MATCHES "AMD64")
 find_program(YASM_EXE NAMES yasm)
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
 	set(YASM_ARGS "-f" "x64" "-f" "elf64" "-X" "gnu" "-g" "dwarf2" "-D" "LINUX")
@@ -62,5 +62,11 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(basilisk_hunter ${SOURCES} ${YASM_OBJECTS})
 target_link_libraries(basilisk_hunter Threads::Threads cpu_features ${CPR_LIBRARIES})
-set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -Werror -flto")
+
+if(MSVC)
+set(CMAKE_CXX_FLAGS "/GL")
+set(CMAKE_EXE_LINKER_FLAGS "/LTCG")
+else()
+set(CMAKE_CXX_FLAGS "-flto")
 set(CMAKE_EXE_LINKER_FLAGS "-flto")
+endif()
