--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 project (basilisk_hunter C CXX ASM)
 add_subdirectory(cpu_features)
 #todo: modularize the cmake file
+#todo: make release/debug targets
 set (VERSION_MAJOR 0)
 set (VERSION_MINOR 1)
 set (VERSION_PATCH 0)
@@ -67,6 +68,6 @@ if(MSVC)
 set(CMAKE_CXX_FLAGS "/GL")
 set(CMAKE_EXE_LINKER_FLAGS "/LTCG")
 else()
-set(CMAKE_CXX_FLAGS "-flto")
+set(CMAKE_CXX_FLAGS "-O3 -Werror -Wall -Wextra -flto")
 set(CMAKE_EXE_LINKER_FLAGS "-flto")
 endif()
