Fix SHAExt build now that I have a CPU to test it with!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ if(MSVC)
 set(CMAKE_CXX_FLAGS "/O2 /W4 /WX /EHsc /GL")
 set(CMAKE_EXE_LINKER_FLAGS "/LTCG")
 else()
-set(CMAKE_CXX_FLAGS "-O3 -Werror -Wall -Wextra -flto")
+set(CMAKE_C_FLAGS "-O3 -Werror -Wall -Wextra -flto -march=native")
+set(CMAKE_CXX_FLAGS "-O3 -Werror -Wall -Wextra -flto -march=native")
 set(CMAKE_EXE_LINKER_FLAGS "-flto")
 endif()
